--- a/templates/index.html
+++ b/templates/index.html
@@ -43,8 +43,8 @@
   <div class="mainContent">
     <div class="container-fluid">
       <div class="row" id="page_title_row">
-        <h1 class="col-3" id="inventory">inventory</h1>
-        <div class="col-8" id="search_container">
+        <h1 class="col-3 fixed-width">inventory</h1>
+        <div class="col-8 stretch-width" id="search_container">
           <input type="text" name="textbox" id="search_bar" value="search">
         </div>
       </div>
@@ -62,15 +62,46 @@
         </div>
         <div class="col-2">
           <button>
-            +   filter
+            + filter
           </button>
         </div>
         <div class="col-6">
         </div>
         <div class="col-2">
           <button>
-             +   part
+            + part
           </button>
+        </div>
+      </div>
+      <div class="row" id="column-titles">
+        <div class="col-12">
+          <span>
+            
+          </span>
+          <span>
+            #SKU
+          </span>
+          <span>
+            Name
+          </span>
+          <span>
+            Value
+          </span>
+          <span>
+            Footprint
+          </span>
+          <span>
+            Quantity
+          </span>
+          <span>
+            Rating
+          </span>
+          <span>
+            Group
+          </span>
+          <span>
+            Location
+          </span>
         </div>
       </div>
     </div>
