--- a/templates/index.html
+++ b/templates/index.html
@@ -74,35 +74,63 @@
         </div>
       </div>
       <div class="row" id="column-titles">
-        <div class="col-12">
-          <span>
-            
-          </span>
-          <span>
-            #SKU
-          </span>
-          <span>
-            Name
-          </span>
-          <span>
-            Value
-          </span>
-          <span>
-            Footprint
-          </span>
-          <span>
-            Quantity
-          </span>
-          <span>
-            Rating
-          </span>
-          <span>
-            Group
-          </span>
-          <span>
-            Location
-          </span>
-        </div>
+        <span> </span>
+        <span>#SKU</span>
+        <span>Name</span>
+        <span>Value</span>
+        <span>Footprint</span>
+        <span>Quantity</span>
+        <span>Rating</span>
+        <span>Group</span>
+        <span>Location</span>
+        <span> </span>
+      </div>
+      <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
+        <span>
+          <input type="checkbox" class="part-checkbox">
+          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+        </span>
+        <span>
+          21
+        </span>
+        <span>
+          Resistor
+        </span>
+        <span>
+          10k
+        </span>
+        <span>
+          0402
+        </span>
+        <span>
+          200
+        </span>
+        <span>
+          16V
+        </span>
+        <span>
+          Passives
+        </span>
+        <span>
+          Grid
+        </span>
+        <span class="part-button-container">
+          <div>
+            <a href="https://www.example.com" target="_blank">
+              <img src="../static/images/icons/launch.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/trash.png" alt="launch" />
+            </a>
+          </div>
+        </span>
       </div>
       
     </div>
