--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="mainContent">
-    <div class="container-fluid">
+    <div class="container-fluid" id="mainContentContainer">
       <div class="row" id="page_title_row">
         <h1 class="col-3 fixed-width">inventory</h1>
         <div class="col-8 stretch-width" id="search_container">
@@ -84,6 +84,196 @@
         <span>Group</span>
         <span>Location</span>
         <span> </span>
+      </div>
+      <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
+        <span>
+          <input type="checkbox" class="part-checkbox">
+          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+        </span>
+        <span>
+          21
+        </span>
+        <span>
+          Resistor
+        </span>
+        <span>
+          10k
+        </span>
+        <span>
+          0402
+        </span>
+        <span>
+          200
+        </span>
+        <span>
+          16V
+        </span>
+        <span>
+          Passives
+        </span>
+        <span>
+          Grid
+        </span>
+        <span class="part-button-container">
+          <div>
+            <a href="https://www.example.com" target="_blank">
+              <img src="../static/images/icons/launch.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/trash.png" alt="launch" />
+            </a>
+          </div>
+        </span>
+      </div>
+      <div class="row part-detail-box container-fluid">
+        <div class="row table-row">
+        <span>
+          <input type="checkbox" class="part-checkbox">
+          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+        </span>
+        <span>
+          21
+        </span>
+        <span>
+          Resistor
+        </span>
+        <span>
+          10k
+        </span>
+        <span>
+          0402
+        </span>
+        <span>
+          200
+        </span>
+        <span>
+          16V
+        </span>
+        <span>
+          Passives
+        </span>
+        <span>
+          Grid
+        </span>
+        <span class="part-button-container">
+          <div>
+            <a href="https://www.example.com" target="_blank">
+              <img src="../static/images/icons/launch.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/trash.png" alt="launch" />
+            </a>
+          </div>
+        </span>
+      </div>
+      </div>
+      <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
+        <span>
+          <input type="checkbox" class="part-checkbox">
+          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+        </span>
+        <span>
+          21
+        </span>
+        <span>
+          Resistor
+        </span>
+        <span>
+          10k
+        </span>
+        <span>
+          0402
+        </span>
+        <span>
+          200
+        </span>
+        <span>
+          16V
+        </span>
+        <span>
+          Passives
+        </span>
+        <span>
+          Grid
+        </span>
+        <span class="part-button-container">
+          <div>
+            <a href="https://www.example.com" target="_blank">
+              <img src="../static/images/icons/launch.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/trash.png" alt="launch" />
+            </a>
+          </div>
+        </span>
+      </div>
+      <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
+        <span>
+          <input type="checkbox" class="part-checkbox">
+          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+        </span>
+        <span>
+          21
+        </span>
+        <span>
+          Resistor
+        </span>
+        <span>
+          10k
+        </span>
+        <span>
+          0402
+        </span>
+        <span>
+          200
+        </span>
+        <span>
+          16V
+        </span>
+        <span>
+          Passives
+        </span>
+        <span>
+          Grid
+        </span>
+        <span class="part-button-container">
+          <div>
+            <a href="https://www.example.com" target="_blank">
+              <img src="../static/images/icons/launch.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            </a>
+          </div>
+          <div>
+            <a href="https://www.example.com" target="_blank">
+            <img src="../static/images/icons/trash.png" alt="launch" />
+            </a>
+          </div>
+        </span>
       </div>
       <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
         <span>
