--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,6 @@
       <p class="menu_label">settings</p>
     </button>
   </div>
-
   <div class="mainContent">
     <div class="container-fluid" id="mainContentContainer">
       <div class="row" id="page_title_row">
@@ -116,12 +115,12 @@
         </span>
         <span class="part-button-container">
           <div>
-            <a href="https://www.example.com" target="_blank">
+            <a href="https://www.digikey.com/en/products/detail/murata-electronics/GRM0335C1E100JA01D/4358173" target="_blank">
               <img src="../static/images/icons/launch.png" alt="launch" />
             </a>
           </div>
           <div>
-            <a href="https://www.example.com" target="_blank">
+            <a href="https://search.murata.co.jp/Ceramy/image/img/A01X/G101/ENG/GRM0335C1E100JA01-01.pdf" target="_blank">
             <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
@@ -132,54 +131,68 @@
           </div>
         </span>
       </div>
-      <div class="row part-detail-box container-fluid">
-        <div class="row table-row">
-        <span>
-          <input type="checkbox" class="part-checkbox">
-          <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
-        </span>
-        <span>
-          21
-        </span>
-        <span>
-          Resistor
-        </span>
-        <span>
-          10k
-        </span>
-        <span>
-          0402
-        </span>
-        <span>
-          200
-        </span>
-        <span>
-          16V
-        </span>
-        <span>
-          Passives
-        </span>
-        <span>
-          Grid
-        </span>
-        <span class="part-button-container">
-          <div>
-            <a href="https://www.example.com" target="_blank">
-              <img src="../static/images/icons/launch.png" alt="launch" />
-            </a>
+      
+      <div class = "row" id="table-details-row">
+        <div class = "container">
+          <div class="row table-row">
+            <span>
+              <input type="checkbox" class="part-checkbox">
+              <img src="../static/images/0402.jpg" alt="logo" class="part-image" />
+            </span>
+            <span>
+              21
+            </span>
+            <span>
+              Resistor
+            </span>
+            <span>
+              10k
+            </span>
+            <span>
+              0402
+            </span>
+            <span>
+              200
+            </span>
+            <span>
+              16V
+            </span>
+            <span>
+              Passives
+            </span>
+            <span>
+              Grid
+            </span>
+            <span class="part-button-container">
+              <div>
+                <a href="https://www.example.com" target="_blank">
+                  <img src="../static/images/icons/launch.png" alt="launch" />
+                </a>
+              </div>
+              <div>
+                <a href="https://www.example.com" target="_blank">
+                <img src="../static/images/icons/datasheet.png" alt="launch" />
+                </a>
+              </div>
+              <div>
+                <a href="https://www.example.com" target="_blank">
+                <img src="../static/images/icons/trash.png" alt="launch" />
+                </a>
+              </div>
+            </span>
           </div>
-          <div>
-            <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/datasheet.png" alt="launch" />
-            </a>
+          <div class = "row">
+            <div class="col-md-auto">
+              <img src="../static/images/0402.jpg" alt="logo" class="details-image" />
+            </div>
+            <div class="col">
+              Name
+            </div>
+            <div class = "row">
+              add image
+            </div>
           </div>
-          <div>
-            <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/trash.png" alt="launch" />
-            </a>
-          </div>
-        </span>
-      </div>
+        </div>
       </div>
       <div class="row table-row" onmouseover="tableElementMouseOver(this)" onmouseleave="tableElementMouseLeave(this)">
         <span>
