--- a/templates/index.html
+++ b/templates/index.html
@@ -115,25 +115,27 @@
         </span>
         <span class="part-button-container">
           <div>
-            <a href="https://www.digikey.com/en/products/detail/murata-electronics/GRM0335C1E100JA01D/4358173" target="_blank">
+            <a href="https://www.digikey.com/en/products/detail/murata-electronics/GRM0335C1E100JA01D/4358173"
+              target="_blank">
               <img src="../static/images/icons/launch.png" alt="launch" />
             </a>
           </div>
           <div>
-            <a href="https://search.murata.co.jp/Ceramy/image/img/A01X/G101/ENG/GRM0335C1E100JA01-01.pdf" target="_blank">
-            <img src="../static/images/icons/datasheet.png" alt="launch" />
+            <a href="https://search.murata.co.jp/Ceramy/image/img/A01X/G101/ENG/GRM0335C1E100JA01-01.pdf"
+              target="_blank">
+              <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/trash.png" alt="launch" />
+              <img src="../static/images/icons/trash.png" alt="launch" />
             </a>
           </div>
         </span>
       </div>
-      
-      <div class = "row" id="table-details-row">
-        <div class = "container">
+
+      <div class="row" id="table-details-row">
+        <div class="container">
           <div class="row table-row">
             <span>
               <input type="checkbox" class="part-checkbox">
@@ -171,25 +173,83 @@
               </div>
               <div>
                 <a href="https://www.example.com" target="_blank">
-                <img src="../static/images/icons/datasheet.png" alt="launch" />
+                  <img src="../static/images/icons/datasheet.png" alt="launch" />
                 </a>
               </div>
               <div>
                 <a href="https://www.example.com" target="_blank">
-                <img src="../static/images/icons/trash.png" alt="launch" />
+                  <img src="../static/images/icons/trash.png" alt="launch" />
                 </a>
               </div>
             </span>
           </div>
-          <div class = "row">
+          <div class="row">
             <div class="col-md-auto">
               <img src="../static/images/0402.jpg" alt="logo" class="details-image" />
+              <div class="row">
+                add image
+              </div>
             </div>
             <div class="col">
-              Name
-            </div>
-            <div class = "row">
-              add image
+              <div class="row">
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_Name">Name</label>
+                  <input class= "name-width data-entry" type="text" name="textbox" id="object_43_Name" value="Resistor">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_Value">Value</label>
+                  <input class= "value-width data-entry" type="text" name="textbox" id="object_43_Value" value="23.5k">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_Footprint">Footprint</label>
+                  <input class= "footprint-width data-entry" type="text" name="textbox" id="object_43_Footprint" value="0805">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_Quantity">Quantity</label>
+                  <input class= "quantity-width data-entry" type="text" name="textbox" id="object_43_Quantity" value="456">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_Rating">Rating</label>
+                  <input class= "rating-width data-entry" type="text" name="textbox" id="object_43_Rating" value="16V">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_group">Group</label>
+                  <input class= "group-width data-entry" type="text" name="textbox" id="object_43_group" value="none">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_location">Location</label>
+                  <input class= "location-width data-entry" type="text" name="textbox" id="object_43_location" value="grid">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_tags">Tags</label>
+                  <input class= "tags-width data-entry" type="text" name="textbox" id="object_43_tags" value="none">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_sku">SKU</label>
+                  <input class= "sku-width data-entry" type="text" name="textbox" id="object_43_sku" value="21">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_price">Price</label>
+                  <input class= "price-width data-entry" type="text" name="textbox" id="object_43_price" value="$0.0064:50">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_warningstock">Warning Stock</label>
+                  <input class= "price-width data-entry" type="text" name="textbox" id="object_43_warningstock" value="2">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_warningstock">Source</label>
+                  <input class= "source-width data-entry" type="text" name="textbox" id="object_43_source" value="https://example.com">
+                </div>
+                <div class="col-auto data-container">
+                  <label class = "data-label" for="object_43_datasheet">Datasheet</label>
+                  <input class= "datasheet-width data-entry" type="text" name="textbox" id="object_43_datasheet" value="https://example.com">
+                </div>
+
+              </div>
             </div>
           </div>
         </div>
@@ -231,12 +291,12 @@
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/datasheet.png" alt="launch" />
+              <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/trash.png" alt="launch" />
+              <img src="../static/images/icons/trash.png" alt="launch" />
             </a>
           </div>
         </span>
@@ -278,12 +338,12 @@
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/datasheet.png" alt="launch" />
+              <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/trash.png" alt="launch" />
+              <img src="../static/images/icons/trash.png" alt="launch" />
             </a>
           </div>
         </span>
@@ -325,17 +385,17 @@
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/datasheet.png" alt="launch" />
+              <img src="../static/images/icons/datasheet.png" alt="launch" />
             </a>
           </div>
           <div>
             <a href="https://www.example.com" target="_blank">
-            <img src="../static/images/icons/trash.png" alt="launch" />
+              <img src="../static/images/icons/trash.png" alt="launch" />
             </a>
           </div>
         </span>
       </div>
-      
+
     </div>
   </div>
 
